fix popup layout on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -585,6 +585,7 @@ footer>a:hover {
     body{
         width: 100vw;
         height: 100vh;
+        overflow: hidden;
     }
 
     .main-button, #button-making-of, #button-special{
@@ -633,5 +634,28 @@ footer>a:hover {
     .page-title-inside-main-content{
         display: none;
         visibility: hidden;
+    }
+
+    .extra-container{
+        width: 100%;
+    }
+
+    .extra-container-panel{
+        width:auto;
+        height: fit-content;
+        padding: 20px;
+        margin: 20px;
+    }
+
+    .extra-container-panel-content{
+        width:100%;
+        height: 80%;
+        max-height: 80%;
+        overflow-y: auto;
+    }
+
+    .about-content-text{
+        color: white;
+        font-size: small;
     }
 }
